--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     
                     <h4>
                        
-                        Développeuse web avec une spécialisation en Data - API. Nouvellement formé en développement web, j'utilise HTML, CSS, JavaScript et NodeJs.  
+                        Développeuse web avec une spécialisation en Data - API. Nouvellement formée en développement web, j'utilise HTML, CSS, JavaScript et NodeJs.  
                         J'évolue de façon autonome sur d'autres langues et cadres comme Mongo Db. Très appliquée, je tends à produire un code de qualité et maintenable dans le temps. Je mets à votre service et au service de la clientèle mon dynamisme, ma curiosité et ma rapidité à m'adapter.
 
                     </h4>
@@ -88,7 +88,7 @@
 
         <section id="companies"> 
 
-            <h3> Competénce Technique </h3> 
+            <h3> Compétences Techniques </h3> 
 
             <div class = "container companies__container" >
                 <span><img src="./images/html.png"></span>
@@ -158,7 +158,7 @@
         <footer>
             <small>
 
-                Copyright © MB   Portifolio
+                Copyright © MB   Portifolio 2023
 
             </small>
         </footer>
