--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                 <div class="portfolio__projects">
                     <article class="portfolio__project">
-                        <span class="portfolio__project-image"><img src="./images/portfolio.jpg"></span>
+                        <span class="portfolio__project-image"><img src="./images/api.png"></span>
                         <div class="portfolio__cta">
                             <a href="https://github.com/MoniqueBarreto" class="btn" target="_blank">Github</a>
                         </div>
